snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/maven-metadata.xml.sha256
aabe35d72d88a0bf9d5a47b503375179e7d66b412a8a78faf21ee0dc86b5b21d